Xss Integration with Django Complete Created a seperate view for both sqli and xss Fixed some routing bugs

--- a/xss-detection/xss_no1.ipynb
+++ b/xss-detection/xss_no1.ipynb
@@ -13,9 +13,9 @@
     "# import tensorflow_datasets as tfds\n",
     "import tensorflow as tf\n",
     "from sklearn.utils import shuffle\n",
-    "from sklearn import preprocessing , neighbors ,svm\n",
+    "from sklearn import preprocessing, neighbors, svm\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xss = pd.read_csv('XSSDataSets/XSSTesting.csv')"
+    "xss = pd.read_csv('XSSDataSets/XSSTesting.csv')\n"
    ]
   },
   {
@@ -146,10 +146,11 @@
     "    for column in column_list:\n",
     "        df[column] = df[column].astype('float')\n",
     "        encoder = preprocessing.StandardScaler()\n",
-    "        df[column] = encoder.fit_transform(df[column].values.reshape(-1,1))\n",
-    "        print(\"The \",column, \"is encoded\")\n",
+    "        df[column] = encoder.fit_transform(df[column].values.reshape(-1, 1))\n",
+    "        print(\"The \", column, \"is encoded\")\n",
     "    return(df)\n",
-    "  \n",
+    "\n",
+    "\n",
     "def encode_categorical(df, column_list):\n",
     "    for column in column_list:\n",
     "        df[column] = df[column].astype('str')\n",
@@ -162,7 +163,8 @@
     "        print(\"The \", column, \"is encoded \")\n",
     "    return(df)\n",
     "\n",
-    "df = encode_categorical(xss,['Class'])"
+    "\n",
+    "df = encode_categorical(xss, ['Class'])\n"
    ]
   },
   {
@@ -181,11 +183,11 @@
     }
    ],
    "source": [
-    "X = np.array(xss.drop(labels=['Class'],axis=1)).reshape(len(xss),1,65)\n",
+    "X = np.array(xss.drop(labels=['Class'], axis=1)).reshape(len(xss), 1, 65)\n",
     "print(len(X))\n",
     "\n",
     "y = np.array(df['Class'])\n",
-    "print(y)"
+    "print(y)\n"
    ]
   },
   {
@@ -195,7 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
@@ -206,7 +209,7 @@
    "outputs": [],
    "source": [
     "train_dataset = tf.data.Dataset.from_tensor_slices((X_train, y_train))\n",
-    "test_dataset = tf.data.Dataset.from_tensor_slices((X_test, y_test))"
+    "test_dataset = tf.data.Dataset.from_tensor_slices((X_test, y_test))\n"
    ]
   },
   {
@@ -220,7 +223,7 @@
     "SHUFFLE_BUFFER_SIZE = 100\n",
     "\n",
     "train_dataset = train_dataset.shuffle(SHUFFLE_BUFFER_SIZE).batch(BATCH_SIZE)\n",
-    "test_dataset = test_dataset.batch(BATCH_SIZE)"
+    "test_dataset = test_dataset.batch(BATCH_SIZE)\n"
    ]
   },
   {
@@ -252,11 +255,11 @@
    ],
    "source": [
     "model = tf.keras.Sequential()\n",
-    "model.add(tf.keras.layers.Dense(20, activation='relu', input_shape= (None,65)))\n",
+    "model.add(tf.keras.layers.Dense(20, activation='relu', input_shape=(None, 65)))\n",
     "model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
-    "model.add(tf.keras.layers.Dense(1,activation='sigmoid'))\n",
+    "model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
     "\n",
-    "model.summary()"
+    "model.summary()\n"
    ]
   },
   {
@@ -268,7 +271,7 @@
    "source": [
     "model.compile(optimizer='adam',\n",
     "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])"
+    "              metrics=['accuracy'])\n"
    ]
   },
   {
@@ -327,7 +330,7 @@
    "source": [
     "history = model.fit(train_dataset,\n",
     "                    epochs=20,\n",
-    "                    verbose=1)"
+    "                    verbose=1)\n"
    ]
   },
   {
@@ -347,7 +350,7 @@
    "source": [
     "model.evaluate(test_dataset)\n",
     "\n",
-    "model.save(\"xss.h5\")"
+    "model.save(\"xss.h5\")\n"
    ]
   },
   {
@@ -357,47 +360,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cal_keyword(eval_string,comparison_s):\n",
-    "    for i in range(0,len(eval_string)):\n",
-    "        if i+len(comparison_s)<len(eval_string):\n",
-    "            if eval_string[i]==comparison_s[0]:\n",
-    "                \n",
+    "def cal_keyword(eval_string, comparison_s):\n",
+    "    for i in range(0, len(eval_string)):\n",
+    "        if i+len(comparison_s) < len(eval_string):\n",
+    "            if eval_string[i] == comparison_s[0]:\n",
+    "\n",
     "                j = i\n",
-    "               \n",
-    "                for q in range(0,len(comparison_s)):\n",
-    "                    if eval_string[j]!=comparison_s[q]:\n",
+    "\n",
+    "                for q in range(0, len(comparison_s)):\n",
+    "                    if eval_string[j] != comparison_s[q]:\n",
     "                        break\n",
-    "                    \n",
-    "                    j+=1\n",
-    "                   \n",
-    "                if (j-i)==len(comparison_s):\n",
+    "\n",
+    "                    j += 1\n",
+    "\n",
+    "                if (j-i) == len(comparison_s):\n",
     "                    return 1.0\n",
-    "    \n",
+    "\n",
     "    return 0.0\n",
+    "\n",
+    "\n",
     "def letter_ratio(eval_s):\n",
     "    count = 0.0\n",
-    "    for i in range(0,len(eval_s)):\n",
+    "    for i in range(0, len(eval_s)):\n",
     "        if ord(eval_s[i].lower()) > 96 and ord(eval_s[i].lower()) < 123:\n",
-    "            count+=1.0\n",
+    "            count += 1.0\n",
     "    return count / len(eval_s)\n",
+    "\n",
+    "\n",
     "def number_ratio(eval_s):\n",
     "    count = 0.0\n",
-    "    for i in range(0,len(eval_s)):\n",
+    "    for i in range(0, len(eval_s)):\n",
     "        if ord(eval_s[i].lower()) > 47 and ord(eval_s[i].lower()) < 58:\n",
-    "            count+=1.0\n",
+    "            count += 1.0\n",
     "    return count / len(eval_s)\n",
+    "\n",
+    "\n",
     "def symbol_ratio(eval_s):\n",
     "    count = 0.0\n",
-    "    for i in range(0,len(eval_s)):\n",
+    "    for i in range(0, len(eval_s)):\n",
     "        if ord(eval_s[i].lower()) > 32 and ord(eval_s[i].lower()) < 48:\n",
-    "            count+=1.0\n",
+    "            count += 1.0\n",
     "        if ord(eval_s[i].lower()) > 37 and ord(eval_s[i].lower()) < 65:\n",
-    "            count+=1.0\n",
+    "            count += 1.0\n",
     "        if ord(eval_s[i].lower()) > 90 and ord(eval_s[i].lower()) < 97:\n",
-    "            count+=1.0\n",
+    "            count += 1.0\n",
     "        if ord(eval_s[i].lower()) > 122 and ord(eval_s[i].lower()) < 127:\n",
-    "            count+=1.0\n",
-    "    return count / len(eval_s)"
+    "            count += 1.0\n",
+    "    return count / len(eval_s)\n"
    ]
   },
   {
@@ -417,78 +426,84 @@
     }
    ],
    "source": [
-    "evaluation_string=\"<video src=1 href=1 onerror=\\\"javascript:alert(1)\\\"></video>\"\n",
-    "new_model=tf.keras.models.load_model(\"xss.h5\")\n",
-    "payload={}\n",
-    "payload['Contains &lt']= cal_keyword(evaluation_string,\"&lt\")\n",
-    "payload['ScriptTag']=cal_keyword(evaluation_string,\"script\")\n",
-    "payload['Readable']=1\n",
-    "payload['Contains \"><']=cal_keyword(evaluation_string,\"\\\"><\")\n",
-    "payload['Contains \\'><']=cal_keyword(evaluation_string,\"\\'><\")\n",
-    "payload['Contains And']=cal_keyword(evaluation_string,\"&\")\n",
-    "payload['Contains Percentage']=cal_keyword(evaluation_string,\"%\")\n",
-    "payload['Contains Slash']=cal_keyword(evaluation_string,\"/\")\n",
-    "payload['Contains BackSlash']=cal_keyword(evaluation_string,\"\\\\\")\n",
-    "payload['Contains Plus']=cal_keyword(evaluation_string,\"+\")\n",
-    "payload['Contains Document']=cal_keyword(evaluation_string,\"document\")\n",
-    "payload['Contains Window']=cal_keyword(evaluation_string,\"window\")\n",
-    "payload['Contains Onload']=cal_keyword(evaluation_string,\"onload\")\n",
-    "payload['Contains Onerror']=cal_keyword(evaluation_string,\"onerror\")\n",
-    "payload['Contains DIV']=cal_keyword(evaluation_string,\"div\")\n",
-    "payload['Contains iframe']=cal_keyword(evaluation_string,\"iframe\")\n",
-    "payload['Contains img']=cal_keyword(evaluation_string,\"img\")\n",
-    "payload['Contains SRC']=cal_keyword(evaluation_string,\"src\")\n",
-    "payload['Contains Var']=cal_keyword(evaluation_string,\"var\")\n",
-    "payload['Contains Eval']=cal_keyword(evaluation_string,\"eval\")\n",
-    "payload['Contains href']=cal_keyword(evaluation_string,\"href\")\n",
-    "payload['Contains Cookie']=cal_keyword(evaluation_string,\"cookie\")\n",
-    "payload['Contains StringfromCharCode']=cal_keyword(evaluation_string,\"string.fromcharcode\")\n",
-    "payload['Contains Single Quote']=cal_keyword(evaluation_string,\"'\")\n",
-    "payload['Contains Question Mark']=cal_keyword(evaluation_string,\"?\")\n",
-    "payload['Contains Exclamation Mark']=cal_keyword(evaluation_string,\"!\")\n",
-    "payload['Contains Semicolon']=cal_keyword(evaluation_string,\";\")\n",
-    "payload['Contains HTTP']=cal_keyword(evaluation_string,\"http\")\n",
-    "payload['Contains JS']=cal_keyword(evaluation_string,\"jsp\")\n",
-    "payload['Contains Hash']=cal_keyword(evaluation_string,\"#\")\n",
-    "payload['Contains Equal']=cal_keyword(evaluation_string,\"=\")\n",
-    "payload['Contains Open Bracket']=cal_keyword(evaluation_string,\"[\")\n",
-    "payload['Contains Close Bracket']=cal_keyword(evaluation_string,\"]\")\n",
-    "payload['Contains Duble Bracket']=cal_keyword(evaluation_string,\"[\") * cal_keyword(evaluation_string,\"]\")\n",
-    "payload['Contains Dollar']=cal_keyword(evaluation_string,\"$\")\n",
-    "payload['Contains Open Parenthesis']=cal_keyword(evaluation_string,\"(\")\n",
-    "payload['Contains Close Parenthesis']=cal_keyword(evaluation_string,\"(\")\n",
-    "payload['Contains Asterik']=cal_keyword(evaluation_string,\"*\")\n",
-    "payload['Contains Comma']=cal_keyword(evaluation_string,\",\")\n",
-    "payload['Contains Hyphen']=cal_keyword(evaluation_string,\"-\")\n",
-    "payload['Contains Less Than']=cal_keyword(evaluation_string,\"<\")\n",
-    "payload['Contains Greater Than']=cal_keyword(evaluation_string,\">\")\n",
-    "payload['Contains At']=cal_keyword(evaluation_string,\"@\")\n",
-    "payload['Contains Underscore']=cal_keyword(evaluation_string,\"_\")\n",
-    "payload['Contains Location']=cal_keyword(evaluation_string,\"location\")\n",
-    "payload['Contains Search']=cal_keyword(evaluation_string,\"search\")\n",
-    "payload['Contains &#']=cal_keyword(evaluation_string,\"&#\")\n",
-    "payload['Contains Colon']=cal_keyword(evaluation_string,\":\")\n",
-    "payload['Contains Dots']=cal_keyword(evaluation_string,\".\")\n",
-    "payload['Contains Open Brace']=cal_keyword(evaluation_string,\"{\")\n",
-    "payload['Contains Close Brace']=cal_keyword(evaluation_string,\"}\")\n",
-    "payload['Contains tilde']=cal_keyword(evaluation_string,\"~\")\n",
-    "payload['Contains Spase']=cal_keyword(evaluation_string,\" \")\n",
-    "payload['Contains Qution']=cal_keyword(evaluation_string,\"\\\"\")\n",
-    "payload['Contains Grave']=0\n",
-    "payload['Contains Duble Equals']=cal_keyword(evaluation_string,\"==\")\n",
-    "payload['Contains Duble Slash']=cal_keyword(evaluation_string,\"//\")\n",
-    "payload['Contains Vertical Bar']=cal_keyword(evaluation_string,\"|\")\n",
-    "payload['Contains Power']=cal_keyword(evaluation_string,\"^\")\n",
-    "payload['Contains Broken Bar']=cal_keyword(evaluation_string,\"¦\")\n",
-    "payload['Contains Alert']=cal_keyword(evaluation_string,\"alert\")\n",
-    "payload['Contains Break Line']=cal_keyword(evaluation_string,\"br\")\n",
-    "payload['Letters Ratio']=format_float = \"{:.2f}\".format(letter_ratio(evaluation_string))\n",
-    "payload['Numbuer Ratio']=format_float = \"{:.2f}\".format(number_ratio(evaluation_string))\n",
-    "payload['Symbols Ratio']=format_float = \"{:.2f}\".format(symbol_ratio(evaluation_string))\n",
-    "payload['Class']=0\n",
-    "payload=pd.DataFrame([payload])\n",
+    "evaluation_string = \"<video src=1 href=1 onerror=\\\"javascript:alert(1)\\\"></video>\"\n",
+    "new_model = tf.keras.models.load_model(\"xss.h5\")\n",
+    "payload = {}\n",
+    "payload['Contains &lt'] = cal_keyword(evaluation_string, \"&lt\")\n",
+    "payload['ScriptTag'] = cal_keyword(evaluation_string, \"script\")\n",
+    "payload['Readable'] = 1\n",
+    "payload['Contains \"><'] = cal_keyword(evaluation_string, \"\\\"><\")\n",
+    "payload['Contains \\'><'] = cal_keyword(evaluation_string, \"\\'><\")\n",
+    "payload['Contains And'] = cal_keyword(evaluation_string, \"&\")\n",
+    "payload['Contains Percentage'] = cal_keyword(evaluation_string, \"%\")\n",
+    "payload['Contains Slash'] = cal_keyword(evaluation_string, \"/\")\n",
+    "payload['Contains BackSlash'] = cal_keyword(evaluation_string, \"\\\\\")\n",
+    "payload['Contains Plus'] = cal_keyword(evaluation_string, \"+\")\n",
+    "payload['Contains Document'] = cal_keyword(evaluation_string, \"document\")\n",
+    "payload['Contains Window'] = cal_keyword(evaluation_string, \"window\")\n",
+    "payload['Contains Onload'] = cal_keyword(evaluation_string, \"onload\")\n",
+    "payload['Contains Onerror'] = cal_keyword(evaluation_string, \"onerror\")\n",
+    "payload['Contains DIV'] = cal_keyword(evaluation_string, \"div\")\n",
+    "payload['Contains iframe'] = cal_keyword(evaluation_string, \"iframe\")\n",
+    "payload['Contains img'] = cal_keyword(evaluation_string, \"img\")\n",
+    "payload['Contains SRC'] = cal_keyword(evaluation_string, \"src\")\n",
+    "payload['Contains Var'] = cal_keyword(evaluation_string, \"var\")\n",
+    "payload['Contains Eval'] = cal_keyword(evaluation_string, \"eval\")\n",
+    "payload['Contains href'] = cal_keyword(evaluation_string, \"href\")\n",
+    "payload['Contains Cookie'] = cal_keyword(evaluation_string, \"cookie\")\n",
+    "payload['Contains StringfromCharCode'] = cal_keyword(\n",
+    "    evaluation_string, \"string.fromcharcode\")\n",
+    "payload['Contains Single Quote'] = cal_keyword(evaluation_string, \"'\")\n",
+    "payload['Contains Question Mark'] = cal_keyword(evaluation_string, \"?\")\n",
+    "payload['Contains Exclamation Mark'] = cal_keyword(evaluation_string, \"!\")\n",
+    "payload['Contains Semicolon'] = cal_keyword(evaluation_string, \";\")\n",
+    "payload['Contains HTTP'] = cal_keyword(evaluation_string, \"http\")\n",
+    "payload['Contains JS'] = cal_keyword(evaluation_string, \"jsp\")\n",
+    "payload['Contains Hash'] = cal_keyword(evaluation_string, \"#\")\n",
+    "payload['Contains Equal'] = cal_keyword(evaluation_string, \"=\")\n",
+    "payload['Contains Open Bracket'] = cal_keyword(evaluation_string, \"[\")\n",
+    "payload['Contains Close Bracket'] = cal_keyword(evaluation_string, \"]\")\n",
+    "payload['Contains Duble Bracket'] = cal_keyword(\n",
+    "    evaluation_string, \"[\") * cal_keyword(evaluation_string, \"]\")\n",
+    "payload['Contains Dollar'] = cal_keyword(evaluation_string, \"$\")\n",
+    "payload['Contains Open Parenthesis'] = cal_keyword(evaluation_string, \"(\")\n",
+    "payload['Contains Close Parenthesis'] = cal_keyword(evaluation_string, \"(\")\n",
+    "payload['Contains Asterik'] = cal_keyword(evaluation_string, \"*\")\n",
+    "payload['Contains Comma'] = cal_keyword(evaluation_string, \",\")\n",
+    "payload['Contains Hyphen'] = cal_keyword(evaluation_string, \"-\")\n",
+    "payload['Contains Less Than'] = cal_keyword(evaluation_string, \"<\")\n",
+    "payload['Contains Greater Than'] = cal_keyword(evaluation_string, \">\")\n",
+    "payload['Contains At'] = cal_keyword(evaluation_string, \"@\")\n",
+    "payload['Contains Underscore'] = cal_keyword(evaluation_string, \"_\")\n",
+    "payload['Contains Location'] = cal_keyword(evaluation_string, \"location\")\n",
+    "payload['Contains Search'] = cal_keyword(evaluation_string, \"search\")\n",
+    "payload['Contains &#'] = cal_keyword(evaluation_string, \"&#\")\n",
+    "payload['Contains Colon'] = cal_keyword(evaluation_string, \":\")\n",
+    "payload['Contains Dots'] = cal_keyword(evaluation_string, \".\")\n",
+    "payload['Contains Open Brace'] = cal_keyword(evaluation_string, \"{\")\n",
+    "payload['Contains Close Brace'] = cal_keyword(evaluation_string, \"}\")\n",
+    "payload['Contains tilde'] = cal_keyword(evaluation_string, \"~\")\n",
+    "payload['Contains Spase'] = cal_keyword(evaluation_string, \" \")\n",
+    "payload['Contains Qution'] = cal_keyword(evaluation_string, \"\\\"\")\n",
+    "payload['Contains Grave'] = 0\n",
+    "payload['Contains Duble Equals'] = cal_keyword(evaluation_string, \"==\")\n",
+    "payload['Contains Duble Slash'] = cal_keyword(evaluation_string, \"//\")\n",
+    "payload['Contains Vertical Bar'] = cal_keyword(evaluation_string, \"|\")\n",
+    "payload['Contains Power'] = cal_keyword(evaluation_string, \"^\")\n",
+    "payload['Contains Broken Bar'] = cal_keyword(evaluation_string, \"¦\")\n",
+    "payload['Contains Alert'] = cal_keyword(evaluation_string, \"alert\")\n",
+    "payload['Contains Break Line'] = cal_keyword(evaluation_string, \"br\")\n",
+    "payload['Letters Ratio'] = format_float = \"{:.2f}\".format(\n",
+    "    letter_ratio(evaluation_string))\n",
+    "payload['Numbuer Ratio'] = format_float = \"{:.2f}\".format(\n",
+    "    number_ratio(evaluation_string))\n",
+    "payload['Symbols Ratio'] = format_float = \"{:.2f}\".format(\n",
+    "    symbol_ratio(evaluation_string))\n",
+    "payload['Class'] = 0\n",
+    "payload = pd.DataFrame([payload])\n",
     "payload.head\n",
-    "X = np.asarray(payload.drop(labels=['Class'],axis=1)).reshape(len(payload),1,65).astype('float32')\n",
+    "X = np.asarray(payload.drop(labels=['Class'], axis=1)).reshape(\n",
+    "    len(payload), 1, 65).astype('float32')\n",
     "\n",
     "y = np.asarray(payload['Class']).astype('float32')\n",
     "\n",
@@ -496,9 +511,7 @@
     "test_payload = tf.data.Dataset.from_tensor_slices((X, y))\n",
     "test_payload = test_payload.batch(BATCH_SIZE)\n",
     "pred = new_model.predict(test_payload)[0][0][0]\n",
-    "print(pred)\n",
-    "\n",
-    "\n"
+    "print(pred)\n"
    ]
   },
   {
